# LensDate

./: .gitignore  AGENTS.md  README.md
backend/: Cargo.toml
backend/src/: common.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/dto/: configs.rs  conversations.rs  demands.rs  merchants.rs  messages.rs  mod.rs  notifications.rs  orders.rs  pagination.rs  payments.rs  photographers.rs  quotes.rs  refunds.rs  teams.rs
backend/src/entity/: audit_logs.rs  configs.rs  conversations.rs  deliveries.rs  delivery_items.rs  demand_attachments.rs  demands.rs  dispute_evidence.rs  disputes.rs  merchant_approvals.rs  merchant_asset_versions.rs  merchant_assets.rs  merchant_contracts.rs  merchant_invoices.rs  merchant_locations.rs  merchant_template_items.rs  merchant_templates.rs  merchant_users.rs  merchants.rs  messages.rs  mod.rs  notifications.rs  order_items.rs  orders.rs  payments.rs  photographers.rs  portfolio_items.rs  portfolios.rs  quote_items.rs  quote_versions.rs  quotes.rs  refunds.rs  reviews.rs  sessions.rs  team_members.rs  teams.rs  user_profiles.rs  users.rs  verification_codes.rs
backend/src/errors/: domain.rs  mod.rs  service.rs
backend/src/handlers/: admin.rs  configs.rs  conversations.rs  demands.rs  merchants.rs  messages.rs  mod.rs  notifications.rs  orders.rs  payments.rs  photographers.rs  quotes.rs  refunds.rs  teams.rs
backend/src/middleware/: auth.rs
backend/src/migration/: m20260116_init.rs  m20260117_merchant_assets.rs  m20260118_add_username.rs  mod.rs
backend/src/repositories/: configs_repo.rs  conversations_repo.rs  demands_repo.rs  (+7 more)
(+129 files in other folders)
