[package]
name = "api_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "with-uuid", "with-chrono", "with-rust_decimal"] }
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1.89"
anyhow = "1.0.97"
bcrypt = "0.18.0"
tower-http = { version = "0.6.8", features = ["fs"] }
